--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.4.3",
     "react-star-ratings": "^2.3.0",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
     "uuid": "^8.3.0"
