--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
+    "stripe": "^8.102.0",
     "validator": "^13.1.17"
   }
 }
